--- a/src/main/resources/templates/list-page.html
+++ b/src/main/resources/templates/list-page.html
@@ -9,9 +9,9 @@
 <body>
 
 <!-- Spinner Start -->
-<div id="spinner"
-     class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-    <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+<div class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center"
+     id="spinner">
+    <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
         <span class="sr-only">Loading...</span>
     </div>
 </div>
@@ -92,7 +92,7 @@
             <div class="col" th:each="accommodation : ${accommodations}">
                 <a th:href="@{${'/accommodation/' + accommodation.getAccommodationId()}}">
                 <div class="card h-100">
-                    <img th:src="@{/img/destination-1.jpg}" class="card-img-top" alt="...">
+                    <img alt="..." class="card-img-top" th:src="@{/img/destination-1.jpg}">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${accommodation.getName()}">Name</h5>
                         <p class="card-text" th:text="${accommodation.getAddress()}">Address</p>
@@ -116,8 +116,8 @@
 
         <!-- 페이지 번호들 -->
         <li class="page-item"
-            th:each="pageNum : ${#numbers.sequence(1, totalPages)}"
             th:class="${pageNum == currentPage + 1} ? 'page-item active' : 'page-item'"
+            th:each="pageNum : ${#numbers.sequence(1, totalPages)}"
             th:if="${pageNum >= currentPage - 3 and pageNum <= currentPage + 3}">
             <a class="page-link" th:href="@{${'/accommodation?keyword=' + request.getKeyword() + '&startDate=' + request.getStartDate + '&endDate=' + request.getEndDate + '&page=' + pageNum}}" th:text="${pageNum}"></a>
         </li>
@@ -129,35 +129,9 @@
     </ul>
 </nav>
 
+<a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
 
-
-
-<!-- Blog End -->
-
-
-
-<!-- Copyright Start -->
-<div class="container-fluid copyright text-body py-4">
-    <div class="container">
-        <div class="row g-4 align-items-center">
-            <div class="col-md-6 text-center text-md-end mb-md-0">
-                <i class="fas fa-copyright me-2"></i><a class="text-white" href="#">심사숙박</a>, All right reserved.
-            </div>
-            <div class="col-md-6 text-center text-md-start">
-                <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                Designed By <a class="text-white" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a
-                    href="https://themewagon.com">ThemeWagon</a>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- Copyright End -->
-
-<!-- Back to Top -->
-<a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i class="fa fa-arrow-up"></i></a>
-
+<footer th:replace="~{/layout/footer::footerFragment}"></footer>
 
 <!-- JavaScript Libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -171,5 +145,4 @@
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
 </body>
-
 </html>
