--- a/src/main/resources/templates/mypageInfo.html
+++ b/src/main/resources/templates/mypageInfo.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html lang="ko-KR" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="ko-KR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <section th:replace="~{/layout/head::headFragment}"></section>
     <title>내 정보 페이지</title>
     <script async src="/js/mypage.js"></script>
 </head>
 <body>
-<div th:replace="~{/layout/top-bar :: top}" style="background-color: #0b204a"></div>
-<div th:replace="~{/layout/navigation-bar :: nav}" style="background-color: #0c4128"></div>
+<div style="background-color: #0b204a" th:replace="~{/layout/top-bar :: top}"></div>
+<div style="background-color: #0c4128" th:replace="~{/layout/navigation-bar :: nav}"></div>
 <div style="background: linear-gradient(rgba(19, 53, 123, .8), rgba(19, 53, 123, .8)), url(/img/tour-booking-bg.jpg);
 ;height: 97px;"></div>
 <div style="display: flex;flex-direction: column;align-items: center;justify-content: center">
@@ -22,32 +22,17 @@
         <h3>전화번호</h3>
         <input class="border-box" name="phone" th:value="${member.phone}">
         <h3>Email</h3>
-        <input class="border-box" name="email" th:value="${member.email}" disabled>
+        <input class="border-box" disabled name="email" th:value="${member.email}">
         <h3>생년월일</h3>
-        <input class="border-box" name="birthDate" th:value="${member.birthDate}" disabled>
+        <input class="border-box" disabled name="birthDate" th:value="${member.birthDate}">
         <h3 style="margin-top: 15px">권한</h3>
-        <input class="border-box" name="role" th:value="${member.role}" disabled>
+        <input class="border-box" disabled name="role" th:value="${member.role}">
         <br>
-        <button type="submit" class="btn btn-primary blue" style="margin-top: 30px; margin-bottom: -10px">변경</button>
-<!--radio version-->
-<!--        <div style="display: flex;justify-content: space-between; gap: 30px; margin-top: 30px">-->
-<!--            <input type="radio" name="role" value="이용자" th:if="${member.role}=='이용자'" id="user" checked>-->
-<!--            <label for="user" th:if="${member.role}=='이용자'" style="margin-left: -30px">이용자</label>-->
-<!--            <input type="radio" name="role" value="이용자" th:unless="${member.role}=='이용자'" id="user" disabled>-->
-<!--            <label for="user" th:unless="${member.role}=='이용자'" style="margin-left: -30px">이용자</label>-->
-<!--            <input type="radio" name="role" value="사업자" th:if="${member.role}=='사업자'" id="business" checked>-->
-<!--            <label for="user" th:if="${member.role}=='사업자'" style="margin-left: -30px">사업자</label>-->
-<!--            <input type="radio" name="role" value="사업자" th:unless="${member.role}=='사업자'" id="business" disabled>-->
-<!--            <label for="user" th:unless="${member.role}=='사업자'" style="margin-left: -30px">사업자</label>-->
-<!--            <input type="radio" name="role" value="관리자" th:if="${member.role}=='관리자'" id="admin" checked>-->
-<!--            <label for="user" th:if="${member.role}=='관리자'" style="margin-left: -30px">관리자</label>-->
-<!--            <input type="radio" name="role" value="관리자" th:unless="${member.role}=='관리자'" id="admin" disabled>-->
-<!--            <label for="user" th:unless="${member.role}=='관리자'" style="margin-left: -30px">관리자</label>-->
-<!--        </div>-->
+        <button class="btn btn-primary blue" style="margin-top: 30px; margin-bottom: -10px" type="submit">변경</button>
     </form>
-    <button type="button" class="btn btn-danger red" id="cancel-register" style="position: absolute;top: 675px">탈퇴</button>
+    <button class="btn btn-danger red" id="cancel-register" style="position: absolute;top: 675px" type="button">탈퇴</button>
 </div>
-<input type="hidden" id="useremail" th:value="${member.email}" >
+<input id="useremail" th:value="${member.email}" type="hidden" >
 <!--<span sec:authentication="principal.authorities"></span>-->
 </body>
 </html>
