--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -9,12 +9,12 @@
     <meta content="" name="description">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500;600&family=Roboto&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    <link href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
@@ -78,9 +78,9 @@
                                     <div class="border rounded p-3">
                                         <div class="container pb-0">
                                             <div class="img-container">
-                                                <img src="/img/explore-tour-1.jpg"
+                                                <img alt="Image"
                                                      class="img-fluid w-35 mx-auto rounded d-block"
-                                                     alt="Image">
+                                                     src="/img/explore-tour-1.jpg">
                                             </div>
                                             <div class="row g-3">
                                                 <div class="col-md-6 text-md-start text-center text-white" style="font-size: 20px;" th:text="${room.name}">
@@ -100,10 +100,10 @@
                                                 </div>
                                                 <div class="col-md-10">
                                                     <div class="row g-3 justify-content-end">
-                                                        <div th:text="${'체크 인 : ' + accommodation.checkIn}" class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;">
+                                                        <div class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;" th:text="${'체크 인 : ' + accommodation.checkIn}">
                                                             체크 인 표기
                                                         </div>
-                                                        <div th:text="${'체크 아웃 : ' + accommodation.checkOut}" class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;">
+                                                        <div class="col-md-3 text-white text-md-end text-center" style="font-size: 15px;" th:text="${'체크 아웃 : ' + accommodation.checkOut}">
                                                             체크 아웃 표기
                                                         </div>
                                                     </div>
@@ -129,25 +129,25 @@
                         </div>
                     </div>
                 </div>
-                <form id="reservationForm" th:action="@{/reservation/{accommodationId}/{roomId}(accommodationId=${accommodation.id}, roomId=${room.roomId})}" method="post">
+                <form id="reservationForm" method="post" th:action="@{/reservation/{accommodationId}/{roomId}(accommodationId=${accommodation.id}, roomId=${room.roomId})}">
                     <p class="text-white mb-4 py-3"> <span class="text-warning"> 예약 가능한 날짜를 확인하시고 선택 해 주세요.</span></p>
                     <div class="row g-3">
                         <div class="col-md-5">
-                            <div class="form-floating date" id="date3" data-target-input="nearest">
-                                <input name="startDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckInUnselectableDate()}" type="text" id="date-picker1" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
+                            <div class="form-floating date" data-target-input="nearest" id="date3">
+                                <input aria-describedby="basic-addon2" aria-label="Search" class="form-control bg-white border-0 small" id="date-picker1" name="startDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckInUnselectableDate()}" type="text">
                                 <label>입실 일 선택</label>
                             </div>
                         </div>
                         <div class="col-md-5">
-                            <div class="form-floating date" id="date4" data-target-input="nearest">
-                                <input name="endDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckOutUnselectableDate()}" type="text" id="date-picker2" class="form-control bg-white border-0 small" aria-label="Search" aria-describedby="basic-addon2">
+                            <div class="form-floating date" data-target-input="nearest" id="date4">
+                                <input aria-describedby="basic-addon2" aria-label="Search" class="form-control bg-white border-0 small" id="date-picker2" name="endDate" th:attr="data-unselectable_dates=${reservationUnable.getCheckOutUnselectableDate()}" type="text">
                                 <label>퇴실 일 선택</label>
                             </div>
                         </div>
-                        <input type="button" class="btn btn-primary text-white col-md-2" id="clear-dates-btn" value="날짜 초기화">
+                        <input class="btn btn-primary text-white col-md-2" id="clear-dates-btn" type="button" value="날짜 초기화">
                         <div class="col-12">
                             <div class="form-floating">
-                                <textarea name="request2" class="form-control bg-white border-0" placeholder="요청 사항" id="request" style="height: 250px"></textarea>
+                                <textarea class="form-control bg-white border-0" id="request" name="request2" placeholder="요청 사항" style="height: 250px"></textarea>
                                 <label for="request">요청 사항</label>
                             </div>
                         </div>
@@ -179,11 +179,10 @@
         </div>
     </div>
 </div>
-</div>
-<!-- Copyright End -->
+<footer th:replace="~{/layout/footer::footerFragment}"></footer>
 
 <!-- Back to Top -->
-<a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i class="fa fa-arrow-up"></i></a>
+<a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
 
 
 <!-- JavaScript Libraries -->
@@ -195,9 +194,9 @@
 <script src="/lib/lightbox/js/lightbox.min.js"></script>
 
 <!--datepicker load-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js" integrity="sha512-L4qpL1ZotXZLLe8Oo0ZyHrj/SweV7CieswUODAAPN/tnqN3PA1P+4qPu5vIryNor6HQ5o22NujIcAZIfyVXwbQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.standalone.min.css">
+<script crossorigin="anonymous" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+<script crossorigin="anonymous" integrity="sha512-L4qpL1ZotXZLLe8Oo0ZyHrj/SweV7CieswUODAAPN/tnqN3PA1P+4qPu5vIryNor6HQ5o22NujIcAZIfyVXwbQ==" referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ko.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker3.standalone.min.css" rel="stylesheet">
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
@@ -365,8 +364,5 @@
 </script>
 
 </body>
-
-
-
 
 </html>
