--- a/src/main/resources/templates/list-page.html
+++ b/src/main/resources/templates/list-page.html
@@ -50,15 +50,14 @@
                 <div class="col-md-2">
                     <div class="form-floating">
                         <input aria-describedby="basic-addon2" aria-label="Search"
-                               class="form-control bg-white border-0 small" id="start-date" name="startDate"
-                               type="date">
+                               autocomplete="off" class="form-control bg-white border-0 small" id="start-date" name="startDate" type="text">
                         <label for="start-date">입실 </label>
                     </div>
                 </div>
                 <div class="col-md-2">
                     <div class="form-floating">
                         <input aria-describedby="basic-addon2" aria-label="Search"
-                               class="form-control bg-white border-0 small" id="end-date" name="endDate" type="date">
+                               autocomplete="off" class="form-control bg-white border-0 small" id="end-date" name="endDate" type="text">
                         <label for="end-date">퇴실 </label>
                     </div>
                 </div>
@@ -78,7 +77,6 @@
     </div>
 </div>
 <!-- Tour Booking End -->
-
 
 
 <!-- List Start -->
@@ -132,15 +130,6 @@
 <a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
 
 <footer th:replace="~{/layout/footer::footerFragment}"></footer>
-
-<!-- JavaScript Libraries -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/lib/easing/easing.min.js"></script>
-<script src="/lib/waypoints/waypoints.min.js"></script>
-<script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-<script src="/lib/lightbox/js/lightbox.min.js"></script>
-
 
 <!-- Template Javascript -->
 <script src="/js/main.js"></script>
